--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "mobx-state-tree": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
